workloads/gw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myiam-gw-deployment
  namespace: demo
  labels:
    app: myiam-gw
    version: v1
spec:
  selector:
    matchLabels:
      app: myiam-gw
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: myiam-gw
        version: v1
    spec:
      containers:
      - name: gw
        image: ccr.ccs.tencentyun.com/ernstliang/myiam-gw:v1.0.16
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: hub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: myiam-gw
  namespace: demo
  labels:
    app: myiam-gw
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: http-8082
    port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: myiam-gw
