workloads/kong-ingress-jwt-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jwt-demo
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: iam.jcliang.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: jwt-demo
          servicePort: 8080
